tests/paczka1/fuzzy1/52396036.err
Error in line 9: yeVX5fXBPp A561 87,1
Error in line 21: GeoeR S868 86,5
Error in line 27: GeoeR A561 11,8
Error in line 37: 5pqUh5 A561 33,2
